TAG: gensatload-6-0-3-1
DATE: 03/07/2016
STAFF: lec
CHANGES: TR12083/replace "vachar(30)" with "text"

TAG: gensatload-6-0-0-1
DATE: 7/23/15
STAFF: pf
CHANGES: postgres conversion release tag

TAG: gensatload-tr11750-MP
DATE: 06/29/2015
STAFF: kstone

TAG: gensatload-tr11750-BP
DATE: 05/28/2015
STAFF: kstone

TAG: gensatload-4-4-2-2
DATE: 03/23/2012
STAFF: sc
CHANGES: TR11011 Gensat load broken
1) Added diffing of input file against copy of last input file to 
   determine if  need to run

TAG: gensatload-4-4-2-1
DATE: 03/21/2012
STAFF: sc
CHANGES: TR11011 Gensat load broken
1) rm getGensatEntrez.py, no longer getting input from NCBI
2) added parseGensatEntrez.py, no getting file from gensat via
   mirror_ftp
2) Configuration.default - removed config to get file 
    from NCBI  (GENSATTOOL*), added INPUTFILE

TAG: gensatload-4-4-0-1
DATE: 10/18/2010
STAFF: dbm
CHANGES:
1) gensatload.sh: fixed copy/paste errors in comments

TAG: gensatload-4-1-1-3
DATE: 07/20/2008
STAFF: dbm
CHANGES: Make associations private

TAG: gensatload-4-1-1-2
DATE: 07/10/2008
STAFF: dbm
CHANGES: Minor tweaks

TAG: gensatload-4-1-1-1
DATE: 07/09/2008
STAFF: dbm
CHANGES: New load (TR9100)
TE: 10/18/2010
STAFF: dbm
CHANGES:
